# ddd_practice

./: Dockerfile  README.md  compose.yaml  dependencies.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a2fb54143309_create_job_table_definition.py
app/: config.py  database.py
db/: models.py
domain/: errors.py  models.py  use_cases.py
infrastructure/: logging.py  metrics.py  redis_client.py
ports/: ports.py
routers/: jobs.py  queues.py
schemas/: job.py
services/: job_service.py  queue_service.py  reaper_service.py  scheduler.py  worker_service.py
tests/: conftest.py
tests/integration/: test_backpressure.py  test_dlq.py  test_jobs_api.py
tests/unit/: test_config.py  test_reaper.py  test_scheduler.py  test_schemas.py  test_worker.py
workers/: job_worker.py  reaper.py
