[project]
name = "ddd-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pytest-asyncio>=1.4.0",
    "redis[hiredis]>=8.0.1",
    "sqlmodel>=0.0.39",
    "structlog>=26.1.0",
    "uuid-v7>=1.0.0",
]
asyncio_mode = "auto"
addopts = "--no-cov"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
